<resources>
    <!-- App name -->
    <string name="app_name">Intrepid CheckIn</string>

    <!-- System defaults -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="default_username">Olaf</string>
    <string name="check_in_string">%1$s - Richard\'s Check-in App - %2$s has checked in</string>
    <string name="not_yet_implemented_toast_message">Not yet implemented.</string>
    <string name="user_greeting">Hello %1$s!\nService Started</string>

    <!-- Service state messages -->
    <string name="service_destroyed_toast_message">Service Destroyed</string>
    <string name="service_created_toast_message">Service was Created</string>

    <!-- User location messages -->
    <string name="user_arrived_toast_message">%1$s is at Intrepid Pursuits!\n(%2$d meters)</string>
    <string name="user_location_toast_message">%1$s is %2$d meters from Intrepid Pursuits!</string>
    <string name="location_update_toast_message">New Location Data Received\nLatitude: %1$f\nLongitude: %2$f</string>

    <!-- Connection messages-->
    <string name="connection_failed_toast_message">Connection for location tracking failed. Ending service.</string>

    <!-- Home screen GUI text-->
    <string name="service_running_indicator">- service is running -</string>
    <string name="home_screen_header">Check In</string>
    <string name="home_screen_input_name_hint">Write Your Name Here</string>
    <string name="start_tracking_button">Start Tracking</string>
    <string name="stop_tracking_button">Stop Tracking</string>


</resources>
