<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_screen_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/home_screen_header"
        android:textColor="@color/home_screen_header_text_color"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tv_service_running"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/service_running_indicator"
        android:textColor="@color/home_screen_service_running_text_color"
        android:textSize="15dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivintrepidlogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/intrepidicon" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_name_edit_text"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/home_screen_input_name_hint"
        android:inputType="textPersonName"
        android:shadowColor="@color/home_screen_input_name_shadow"
        android:textColor="@color/home_screen_input_name"
        android:textColorHint="@color/home_screen_input_name_hint" />

    <Button
        android:id="@+id/buttonStartTracking"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_rounded_button"
        android:onClick="startService"
        android:text="@string/start_tracking_button" />

    <Button
        android:id="@+id/buttonStopTracking"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_rounded_button"
        android:onClick="stopService"
        android:text="@string/stop_tracking_button" />

    <TextView
        android:id="@+id/tv_location_data"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="- location data -"
        android:textColor="#FFFFFFFF"
        android:visibility="gone" />

</LinearLayout>
